Forgot to make a way to turn tone off.
Setting vfo clears tone, setting tone to 0 clears tone.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,8 +26,10 @@
             "stopOnEntry": true,
             "args": [
                 "-vvv",
-                "vfo",
-                "14733+"
+                "ser",
+                "COM20",
+                "tone",
+                "0"
             ]
         }
     ]
