Added freq command to read back displayed frequency

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,8 +28,7 @@
                 "-vvv",
                 "ser",
                 "COM20",
-                "tone",
-                "0"
+                "freq"
             ]
         }
     ]
